# sales-training

./: .gitignore  package-lock.json  package.json
backend/: README.md  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0fe554801ac1_rename_auth0_id_to_auth_id.py  13f4dcfe3742_add_created_on_column.py  594594824a51_initial_postgresql_migration.py  8645c892b9a0_rename_auth_id_to_sub.py  e4beb4ba22bf_initial_migration.py  eac995c26eef_add_cohort_id_to_courses.py  f657e979f922_add_optional_learning_objective_to_.py  fc2567a78d1d_initial.py
backend/app/: auth.py  database.py  init_db.py  main.py  models.py
backend/src/backend/: auth.py  crud.py  database.py  enums.py  main.py  models.py  schemas.py
backend/src/backend/routes/: courses.py  users.py
frontend/: .env.local.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(authenticated)/: layout.tsx
frontend/app/(authenticated)/dashboard/: page.tsx
frontend/app/admin/role-management/: page.tsx
frontend/app/api/courses/: route.ts
frontend/app/api/users/: route.ts
frontend/app/components/: AuthButton.tsx  AuthGuard.tsx  AuthenticatedLayout.tsx  DashboardLayout.tsx  Drawer.tsx  Navbar.tsx  Navigation.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/app/dashboard/student/: page.tsx
frontend/app/dashboard/teacher/: page.tsx
frontend/app/select-role/: page.tsx
(+19 files in other folders)
